[package]
name = "paper-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
gobject-sys = "0.19.5"
lazy_static = "1.4.0"
poppler = { git = "https://github.com/DMSrs/poppler-rs" }
rust-stemmers = "1.2.0"
serde = "1.0.203"
serde_derive = "1.0.203"
tokio = { version = "1.38.0", features = ["full", "macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
